--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ html {
 
 .navbar .logo {
   color: white;
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-left: 10%;
+  font-size: 1rem;
+  font-weight: normal;
+  margin-left: 14%;
 }
 
 .navbar .nav-links a {
