--- a/style.css
+++ b/style.css
@@ -648,7 +648,7 @@ hr {
     display: flex; 
   }
 }
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .content {
     margin-top: 40%; 
     font-size: 1.4rem;
@@ -670,7 +670,7 @@ hr {
     font-size: 14px;
     padding: 10px 18px;
   }
-}
+} */
 
 
 @media (max-width: 768px) {
